purltal/purltal-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: purltal
  namespace: purltal
  labels:
    k8s-app: purltal
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: purltal
  type: ClusterIP
